# auto-favicon-mcp

./: .gitignore  README.md  main.py  pyproject.toml
